- Implementado el método Preprocessor::computeOptimalThreshold. - Añadido el método Clip::nPixels - Actualizada la documentación

--- a/trunk/doc/latex/class_pixel.tex
+++ b/trunk/doc/latex/class_pixel.tex
@@ -176,7 +176,7 @@ Returns the pixel's gray level.
 
 Definition at line 89 of file Pixel.cpp.
 
-Referenced by Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_pixel_5f287c6a53167076bc8f1ce54e74e38d}{
+Referenced by Preprocessor::computeOptimalThreshold(), Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_pixel_5f287c6a53167076bc8f1ce54e74e38d}{
 \index{Pixel@{Pixel}!grayLevel@{grayLevel}}
 \index{grayLevel@{grayLevel}!Pixel@{Pixel}}
 \subsubsection[grayLevel]{\setlength{\rightskip}{0pt plus 5cm}void Pixel::grayLevel (const double \& {\em grayLevel})}}
@@ -201,4 +201,4 @@ Definition at line 101 of file Pixel.cpp.
 The documentation for this class was generated from the following files:\begin{CompactItemize}
 \item 
 \hyperlink{_pixel_8h}{Pixel.h (125)}\item 
-\hyperlink{_pixel_8cpp}{Pixel.cpp (125)}\end{CompactItemize}
+\hyperlink{_pixel_8cpp}{Pixel.cpp (126)}\end{CompactItemize}
