--- a/trunk/doc/latex/class_clip.tex
+++ b/trunk/doc/latex/class_clip.tex
@@ -25,7 +25,7 @@ The idea behind this class is to encapsulate all the interactions with Magick++,
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
-\item[Date:]2008-10-04 \end{Desc}
+\item[Date:]2008-10-06 \end{Desc}
 
 
 Definition at line 31 of file Clip.h.\subsection*{Public Member Functions}
@@ -56,7 +56,9 @@ void \hyperlink{class_clip_bfb1bc4bf1a16c05493f5d6d03ba2498}{width} (const unsig
 \hyperlink{class_pixel}{Pixel} \hyperlink{class_clip_260bfb94abaa9d2df692ba33146cc62e}{getPixel} (const unsigned int \&x, const unsigned int \&y) const 
 \begin{CompactList}\small\item\em Returns the pixel at coordinates (x,y). \item\end{CompactList}\item 
 void \hyperlink{class_clip_cf9dc38eade61776c6c8497f2ce53b7b}{setPixel} (const unsigned int \&x, const unsigned int \&y, const double \&grayLevel)
-\begin{CompactList}\small\item\em Sets the gray level of a pixel at coordinates (x,y). \item\end{CompactList}\end{CompactItemize}
+\begin{CompactList}\small\item\em Sets the gray level of a pixel at coordinates (x,y). \item\end{CompactList}\item 
+unsigned int \hyperlink{class_clip_23ad153e40b62cc9178ff6b439ad7d92}{nPixels} () const 
+\begin{CompactList}\small\item\em Returns the number of pixels within the clip. \item\end{CompactList}\end{CompactItemize}
 \subsection*{Private Member Functions}
 \begin{CompactItemize}
 \item 
@@ -271,7 +273,7 @@ Returns the clip's height.
 
 Definition at line 191 of file Clip.cpp.
 
-Referenced by Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_f5b4598afd42e098c3811f7a82227cdd}{
+Referenced by Preprocessor::computeOptimalThreshold(), Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_f5b4598afd42e098c3811f7a82227cdd}{
 \index{Clip@{Clip}!height@{height}}
 \index{height@{height}!Clip@{Clip}}
 \subsubsection[height]{\setlength{\rightskip}{0pt plus 5cm}void Clip::height (const unsigned int \& {\em height})}}
@@ -312,7 +314,7 @@ Returns the clip's width.
 
 Definition at line 222 of file Clip.cpp.
 
-Referenced by Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_bfb1bc4bf1a16c05493f5d6d03ba2498}{
+Referenced by Preprocessor::computeOptimalThreshold(), Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_bfb1bc4bf1a16c05493f5d6d03ba2498}{
 \index{Clip@{Clip}!width@{width}}
 \index{width@{width}!Clip@{Clip}}
 \subsubsection[width]{\setlength{\rightskip}{0pt plus 5cm}void Clip::width (const unsigned int \& {\em width})}}
@@ -362,7 +364,7 @@ If either the x coordinate or the y coordinate are out of the image borders, an 
 
 Definition at line 260 of file Clip.cpp.
 
-Referenced by Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_cf9dc38eade61776c6c8497f2ce53b7b}{
+Referenced by Preprocessor::computeOptimalThreshold(), Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_cf9dc38eade61776c6c8497f2ce53b7b}{
 \index{Clip@{Clip}!setPixel@{setPixel}}
 \index{setPixel@{setPixel}!Clip@{Clip}}
 \subsubsection[setPixel]{\setlength{\rightskip}{0pt plus 5cm}void Clip::setPixel (const unsigned int \& {\em x}, \/  const unsigned int \& {\em y}, \/  const double \& {\em grayLevel})}}
@@ -386,7 +388,24 @@ If either the x coordinate or the y coordinate are out of the image borders, an 
 
 Definition at line 298 of file Clip.cpp.
 
-Referenced by Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_66fc93c15de96d077d2242a53576528e}{
+Referenced by Preprocessor::removeIsolatedNoise().\hypertarget{class_clip_23ad153e40b62cc9178ff6b439ad7d92}{
+\index{Clip@{Clip}!nPixels@{nPixels}}
+\index{nPixels@{nPixels}!Clip@{Clip}}
+\subsubsection[nPixels]{\setlength{\rightskip}{0pt plus 5cm}unsigned int Clip::nPixels () const}}
+\label{class_clip_23ad153e40b62cc9178ff6b439ad7d92}
+
+
+Returns the number of pixels within the clip. 
+
+\begin{Desc}
+\item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
+\begin{Desc}
+\item[Date:]2008-10-06 \end{Desc}
+
+
+Definition at line 333 of file Clip.cpp.
+
+Referenced by Preprocessor::computeOptimalThreshold().\hypertarget{class_clip_66fc93c15de96d077d2242a53576528e}{
 \index{Clip@{Clip}!relocateClipOrigin@{relocateClipOrigin}}
 \index{relocateClipOrigin@{relocateClipOrigin}!Clip@{Clip}}
 \subsubsection[relocateClipOrigin]{\setlength{\rightskip}{0pt plus 5cm}void Clip::relocateClipOrigin ()\hspace{0.3cm}{\tt  \mbox{[}private\mbox{]}}}}
@@ -403,7 +422,7 @@ When any of the clip attributes change, it is neccesary to relocate the clip pos
 \item[Date:]2008-10-04 \end{Desc}
 
 
-Definition at line 335 of file Clip.cpp.
+Definition at line 345 of file Clip.cpp.
 
 Referenced by height(), width(), x(), and y().\hypertarget{class_clip_e050cf90340e9160f79688627d69a00b}{
 \index{Clip@{Clip}!adjustClipSize@{adjustClipSize}}
@@ -422,7 +441,7 @@ When the clip origin changes, it is neccesary to test whether the clip dimension
 \item[Date:]2008-10-04 \end{Desc}
 
 
-Definition at line 356 of file Clip.cpp.
+Definition at line 366 of file Clip.cpp.
 
 Referenced by x(), and y().
 
@@ -438,7 +457,7 @@ Frame within the image where the clip is located.
 
 It is modified automatically when the clip attributes change 
 
-Definition at line 128 of file Clip.h.
+Definition at line 133 of file Clip.h.
 
 Referenced by Clip(), relocateClipOrigin(), setPixel(), and $\sim$Clip().\hypertarget{class_clip_593bf304450ff4c7fe4ded74dff1c188}{
 \index{Clip@{Clip}!originPixel\_\-@{originPixel\_\-}}
@@ -451,11 +470,11 @@ Frame's upper leftmost pixel.
 
 It is modified automatically when the clip attributes change 
 
-Definition at line 133 of file Clip.h.
+Definition at line 138 of file Clip.h.
 
 Referenced by Clip(), getPixel(), relocateClipOrigin(), and setPixel().
 
 The documentation for this class was generated from the following files:\begin{CompactItemize}
 \item 
-\hyperlink{_clip_8h}{Clip.h (125)}\item 
-\hyperlink{_clip_8cpp}{Clip.cpp (125)}\end{CompactItemize}
+\hyperlink{_clip_8h}{Clip.h (126)}\item 
+\hyperlink{_clip_8cpp}{Clip.cpp (126)}\end{CompactItemize}
