--- a/trunk/doc/latex/class_pixel.tex
+++ b/trunk/doc/latex/class_pixel.tex
@@ -174,9 +174,7 @@ Returns the pixel's gray level.
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 89 of file Pixel.cpp.
-
-Referenced by Preprocessor::computeOptimalThreshold(), Preprocessor::findBackgroundReferenceGrayLevel(), and Preprocessor::removeIsolatedNoise().\hypertarget{class_pixel_5f287c6a53167076bc8f1ce54e74e38d}{
+Definition at line 89 of file Pixel.cpp.\hypertarget{class_pixel_5f287c6a53167076bc8f1ce54e74e38d}{
 \index{Pixel@{Pixel}!grayLevel@{grayLevel}}
 \index{grayLevel@{grayLevel}!Pixel@{Pixel}}
 \subsubsection[grayLevel]{\setlength{\rightskip}{0pt plus 5cm}void Pixel::grayLevel (const double \& {\em grayLevel})}}
