- Solucionado un error de ortografía en la documentación de la clase Recognizer - Actualizada la documentación. - Actualizado el Makefile para añadir las opciones de compilación condicional con depuración.

--- a/trunk/doc/latex/class_recognizer.tex
+++ b/trunk/doc/latex/class_recognizer.tex
@@ -21,7 +21,7 @@ This class encapsulates all the stages related to the optical character recognit
 This class manages the press clips on a image loaded with the Magick++ utilities. The newspaper pages should be an image that comes in several formats, such JPEG, PDF, PNG, etc. The Magick++ library (an API for the ImageMagick suite) provides an abstraction layer to keep the code independent from the image format. The idea behind this class is to encapsulate all the interactions with Magick++, so that the rest of the classes have an unified way to work.
 
 \begin{Desc}
-\item[See also:]\hyperlink{class_text}{Text}, Statistic, \href{http://www.imagemagick.org}{\tt ImageMagick}, \href{http://www.imagemagick.org/Magick++/}{\tt Magick++ API}\end{Desc}
+\item[See also:]\hyperlink{class_text}{Text}, \hyperlink{class_statistics}{Statistics}, \href{http://www.imagemagick.org}{\tt ImageMagick}, \href{http://www.imagemagick.org/Magick++/}{\tt Magick++ API}\end{Desc}
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
